admin functionality + more

--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="/custom.css" type="text/css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="/js/public.js"></script>
+  <script src="/js/admin.js"></script>
+  <script src="/js/users.js"></script>
   <title>Tech webshop</title>
 </head>
 <header>
@@ -26,8 +28,12 @@
         
       </ul>
       <ul class="right">
-        <li><a class="btn grey lighten-4 black-text" href="/signup">Sign up</a></li>
-        <li><a class="btn grey lighten-4 black-text" href="/login">Log in</a></li>
+          <li><a href="/admin/categories">Categories</a></li>
+          <li><a href="/admin/products">Products</a></li>
+          <li><a href="/orders">All orders</a></li>
+          <li><a href="/admin/users">Users</a></li>
+          <li><a href="/settings">Settings</a></li>
+          <li><a class="btn grey lighten-4 black-text" href="/logout">Log out</a></li>
       </ul>
     </div>
   </nav>
