--- a/views/user/header.html
+++ b/views/user/header.html
@@ -12,6 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" href="/custom.css" type="text/css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="/js/users.js"></script>
   <script src="/js/public.js"></script>
   <title>Tech webshop</title>
 </head>
@@ -26,8 +27,9 @@
         
       </ul>
       <ul class="right">
-        <li><a class="btn grey lighten-4 black-text" href="/signup">Sign up</a></li>
-        <li><a class="btn grey lighten-4 black-text" href="/login">Log in</a></li>
+          <li><a href="/orders">Your Orders</a></li>
+          <li><a href="/settings">Settings</a></li>
+        <li><a class="btn grey lighten-4 black-text" href="/logout">Log out</a></li>
       </ul>
     </div>
   </nav>
