--- a/views/admin/categories.html
+++ b/views/admin/categories.html
@@ -3,17 +3,44 @@
         <div id="stats" class="row"></div>
         <div class="row statsMargin" id="orders">
             <h4>Categories</h4>
-            <table>
-                <thead>
-                  <tr>
-                      <th></th>
-                      <th>Name</th>
-                      <th></th>
-                  </tr>
-                </thead>
-                <tbody id="categories-body">
-                </tbody>
-              </table>
+            <div class="row">
+                <div class="col s6">
+                    <div class="row">
+                        <form action="/category" method="POST" enctype="multipart/form-data">
+                            <div class="input-field col s8 statsMargin">
+                                <input id="name" name="name" type="text" class="validate">
+                                <label class="active">Category name</label>
+                            </div>
+                                            <div class="file-field input-field col s8 statsMargin">
+                                                <div class="btn light-blue darken-3">
+                                                    <span>File</span>
+                                                    <input type="file" name="img_url">
+                                                </div>
+                                                <div class="file-path-wrapper">
+                                                    <input class="file-path validate" type="text"
+                                                        placeholder="Upload one or more files">
+                                                </div>
+                                            </div>
+                            <button class="btn waves-effect waves-light col s8 statsMargin light-blue darken-3" type="submit" name="action">Save
+                                <i class="material-icons right">send</i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col s6">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Name</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody id="categories-body">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </body>
