--- a/views/admin/products.html
+++ b/views/admin/products.html
@@ -1,24 +1,24 @@
 <body>
-        <div class="container">
-            <div id="stats" class="row"></div>
-            <div class="row statsMargin" id="orders">
-                <h4>Products</h4>
-                <table>
-                    <thead>
-                      <tr>
-                          <th></th>
-                          <th>Name</th>
-                          <th>Category</th>
-                          <th>Price</th>
-                          <th>Description</th>
-                          <th>In stock</th>
-                          <th>Featured</th>
-                          <th></th>
-                      </tr>
-                    </thead>
-                    <tbody id="products-body">
-                    </tbody>
-                  </table>
-            </div>
+    <div class="container">
+        <div id="stats" class="row"></div>
+        <div class="row statsMargin" id="orders">
+            <h4>Products</h4> <a href="/admin/product" class="btn light-blue darken-3">Add product</a>
+            <table>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Price</th>
+                        <th>Description</th>
+                        <th>In stock</th>
+                        <th>Featured</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="products-body">
+                </tbody>
+            </table>
         </div>
-    </body>
+    </div>
+</body>
