--- a/views/header.html
+++ b/views/header.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/custom.css" type="text/css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="/js/public.js"></script>
+  <script src="/js/card.js"></script>
   <title>Tech webshop</title>
 </head>
 <header>
@@ -21,13 +22,14 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="left hide-on-med-and-down">
         <li><a href="/">Home</a></li>
-        <li><a href="/products">Products</a></li>      
+        <li><a href="/products">Products</a></li>
       </ul>
       <ul class="right">
         <li><a class="btn grey lighten-4 black-text" href="/signup">Sign up</a></li>
         <li><a class="btn grey lighten-4 black-text" href="/login">Log in</a></li>
       </ul>
     </div>
+    
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
