--- a/views/user/header.html
+++ b/views/user/header.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="/js/users.js"></script>
   <script src="/js/public.js"></script>
+  <script src="/js/card.js"></script>
   <title>Tech webshop</title>
 </head>
 <header>
@@ -22,7 +23,8 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="left hide-on-med-and-down">
         <li><a href="/">Home</a></li>
-        <li><a href="/products">Products</a></li>   
+        <li><a href="/products">Products</a></li>
+        <li id="cart-content"></li>     
       </ul>
       <ul class="right">
           <li><a href="/orders">Your Orders</a></li>
