--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -16,6 +16,8 @@
   <script src="/js/admin.js"></script>
   <script src="/js/users.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/socket.js"></script>
   <title>Tech webshop</title>
 </head>
 <header>
