--- a/views/header.html
+++ b/views/header.html
@@ -14,6 +14,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="/js/public.js"></script>
   <script src="/js/card.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/socket.js"></script>
   <title>Tech webshop</title>
 </head>
 <header>
