--- a/views/user/header.html
+++ b/views/user/header.html
@@ -15,6 +15,8 @@
   <script src="/js/users.js"></script>
   <script src="/js/public.js"></script>
   <script src="/js/card.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/socket.js"></script>
   <title>Tech webshop</title>
 </head>
 <header>
