--- a/views/user/card.html
+++ b/views/user/card.html
@@ -19,7 +19,9 @@
             <strong>Payment</strong>
             <br>
             <br>
-            <a href="/checkout" class="waves-effect waves-light btn light-blue darken-3">Pay</a>
+            <a onclick="onPayClick()" class="waves-effect waves-light btn light-blue darken-3">Pay</a>
         </div>
     </div>
+    <script src="https://checkout.stripe.com/checkout.js" defer>
+</script>
 </body>
