--- a/views/user/orders.html
+++ b/views/user/orders.html
@@ -3,6 +3,7 @@
         <div id="stats" class="row"></div>
         <div class="row statsMargin" id="orders">
             <h4>Orders</h4>
+            <div id="totalPrice"></div>
             <table>
                     <thead>
                       <tr>
