--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -38,6 +38,7 @@
         <li><a href="/products">Products</a></li>
       </ul>
       <ul class="right">
+        <li><a href="/dashboard">Dashboard</a></li>
         <li><a href="/admin/categories">Categories</a></li>
         <li><a href="/admin/products">Products</a></li>
         <li><a href="/orders">All orders</a></li>
